--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
 
     <section class="container- margin-top-bottom seccion-prestamos">
         <h1 class="center">Clientes que se dieron préstamos</h1>
+        <div class="buscador">
+            <input class="palabra-look" type="text" placeholder="Buscar..."><span class="span-look"><img class="look" src="assets/images/look.png" alt=""></span>
+        </div>
         <div id="PrestamosHechos"  class="container- contenido-cards">
             
         </div>
@@ -194,6 +197,12 @@
             <div class="linea lineaTres"></div>
         </div>
     </div>
+
+    <div class=" buscador-responsive">
+        <input id="texto-responsive" class="palabra-look" type="text" placeholder="Buscar..."><span class="span-look"><img class="look" src="assets/images/look.png" alt=""></span>
+    </div>
+
+    <div class="resultado"><p>ACA</p></div>
 
     <footer>
         <div class="container-">
