ajustes y cerrar sesion

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
     <nav>
         <div class="container-">
             <ul class="list-a">
-                <li><a href="#">Menú</a></li>
                 <li><a href="#info">Información & Beneficios</a> </li>
                 <li><a href="#instrucciones">Instrucciones</a></li>
-                <li><a href="#prestamos">Realizar un Préstamo</a></li>
-                <!-- <li id="nombrePrestamista"></li> -->
             </ul>
         </div>
     </nav>
@@ -85,13 +82,9 @@
 
     <section id="instrucciones" class="seccion-intrucciones">
         <div class="container-">
-            <h2>Instrucciones para dar préstamos</h2>
+            <h2>INSTRUCCIONES </h2>
             <div class="pasos">
-                <p><span>1</span> Registra tus datos como prestamista </p>
-                <p><span>2</span> Añade los datos a la persona que desees prestar dinero </p>
-                <p><span>3</span> Ingresa monto, porcetaje y en cuantas cuotas te pagaran </p>
-                <p><span>4</span> Visualiza los prestamos que realizaste </p>
-                <p><span>5</span> Envia tu información a tu whatsapp </p>
+                <p><span>Paso 1 </span> Registra tus datos como prestamista </p>
             </div>
         </div>
     </section>
@@ -127,15 +120,8 @@
         </div>
     </section>
 
-
-
-
-
-
-    <div id="prestamos" style="display: none;" class="contenido-prestamista datos-prestamos">
+    <div id="prestamos"  class="contenido-prestamista datos-prestamos hidden">
         <h1>Realizar un Préstamo</h1>
-        <p>Información del préstamo</p>
-
         <p>Datos de la persona a prestar dinero:</p>
             <div class="form-prestamos">
                 <div>
@@ -215,6 +201,7 @@
     <script src="assets/js/carrusel-jquery.min.js"></script>
     <script src="assets/js/carrusel_owl.carousel.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/script.js"></script>
+    <!-- <script src="assets/js/app.js"></script> -->
 </body>
 </html>
