--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+    <meta name="author" content="JhonatanWalterSen">
+    <meta name="audience" content="all">
+    <meta name="description" content="Organiza tus prestamos realizados y calcula tus ganancias.">
+    <meta name="keywords" content="JhonatanSencillo, Prestamos Sencillo, JhonatanWalterSen">
+    <meta name="robots" content="index">
+    <meta name>
     <link rel="shortcut icon" href="assets/images/icono.png">
     <title>Presta Dinero</title>
     <link rel="stylesheet" href="assets/css/style.css">
