--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <div class="flex">
                 <div class="contenido-izq">
                     <div class="logo">
-                        <img src="assets/images/logo.png" alt="">
+                        <img src="assets/images/logo.png" alt="logo-prestamos-sencillo">
                     </div>
                 </div>
                 <div class="contenido-der">
                     <div class="owl-carousel owl-theme">
-                        <div class="item"><img src="assets/images/billete-euros.jpg" alt=""></div>
-                        <div class="item"><img src="assets/images/billete-soles.jpg" alt=""></div>
-                        <div class="item"><img src="assets/images/billete-pesos.jpg" alt=""></div>
+                        <div class="item"><img src="assets/images/billete-euros.jpg" alt="billete-euros"></div>
+                        <div class="item"><img src="assets/images/billete-soles.jpg" alt="billete-soles"></div>
+                        <div class="item"><img src="assets/images/billete-pesos.jpg" alt="billete-pesos"></div>
                     </div>
                 </div>
             </div>
@@ -58,22 +58,22 @@
             </div>
 
             <div class="contenido-cards">
-                <div class="cards">
-                    <div><img src="assets/images/icon1.png" alt=""></div>
+                <div class="cards-beneficios">
+                    <div><img src="assets/images/icon1.png" alt="imagen-beneficio-1"></div>
                     <div>
                         <p><strong>ADMINISTRA</strong></p>
                         <p>Organiza tus prestamos de manera fácil y sencilla.</p>
                     </div>
                 </div>
-                <div class="cards">
-                    <div><img src="assets/images/icon2.png" alt=""></div>
+                <div class="cards-beneficios">
+                    <div><img src="assets/images/icon2.png" alt="imagen-beneficio-2"></div>
                     <div>
                         <p><strong>POTENCIA</strong></p>
                         <p>Conoce cuales serán tus ganacias a largo plazo</p>
                     </div>
                 </div>
-                <div class="cards">
-                    <div><img src="assets/images/icon3.png" alt=""></div>
+                <div class="cards-beneficios">
+                    <div><img src="assets/images/icon3.png" alt="imagen-beneficio-3"></div>
                     <div>
                         <p><strong>GENERA</strong></p>
                         <p>Haz crecer tu dinero potencialment</p>
@@ -169,7 +169,7 @@
     </section>
 
     <div class=" buscador-responsive">
-        <input id="texto-responsive" class="palabra-look" type="text" placeholder="Buscar..."><span class="span-look"><img class="look" src="assets/images/look.png" alt=""></span>
+        <input id="texto-responsive" class="palabra-look" type="text" placeholder="Buscar..."><span class="span-look"><img class="look" src="assets/images/look.png" alt="imagen-buscar"></span>
     </div>
 
     <section class="container- margin-top-bottom seccion-prestamos">
@@ -189,10 +189,10 @@
     <footer>
         <div class="container-">
             <div class="logo-sociales">
-                <div class="logo-footer"><img src="assets/images/iconosf.png" alt=""></div>
+                <div class="logo-footer"><img src="assets/images/iconosf.png" alt="logo-footer"></div>
                 <div class="redes">
-                    <a href="https://github.com/JhonatanWalterSen" target="_blank"><img src="assets/images/git_icon.png" alt=""></a>
-                    <a href="https://www.linkedin.com/in/jhonatan-ariza-quispe/" target="_blank"><img src="assets/images/ld_icon.png" alt=""></a>
+                    <a href="https://github.com/JhonatanWalterSen" target="_blank"><img src="assets/images/git_icon.png" alt="github-jhonatanwaltersen"></a>
+                    <a href="https://www.linkedin.com/in/jhonatan-ariza-quispe/" target="_blank"><img src="assets/images/ld_icon.png" alt="Linkedin-Jhonatan-Ariza"></a>
                 </div>
             </div>
             <div class="detalles-footer">
