--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 </div>
                 <div class="contenido-der">
                     <div class="owl-carousel owl-theme">
-                        <div class="item"><img src="assets/images/billete-euros.jpg" alt="billete-euros"></div>
-                        <div class="item"><img src="assets/images/billete-soles.jpg" alt="billete-soles"></div>
-                        <div class="item"><img src="assets/images/billete-pesos.jpg" alt="billete-pesos"></div>
+                        <div class="item"><img src="assets/images/billete-euros.webp" alt="billete-euros"></div>
+                        <div class="item"><img src="assets/images/billete-soles.webp" alt="billete-soles"></div>
+                        <div class="item"><img src="assets/images/billete-pesos.webp" alt="billete-pesos"></div>
                     </div>
                 </div>
             </div>
